--- a/dts/mt7981b-bt-r320-emmc.dts
+++ b/dts/mt7981b-bt-r320-emmc.dts
@@ -8,7 +8,7 @@
 #include "mt7981.dtsi"
 
 / {
-	model = "BT-R320";
+	model = "Globitel BT-R320";
 	compatible = "bt,r320-emmc", "mediatek,mt7981";
 
 	aliases {
