--- a/sl3000.config
+++ b/sl3000.config
@@ -7609,7 +7609,7 @@ CONFIG_PACKAGE_wrtbwmon=y
 # CONFIG_PACKAGE_wgsd-coredns is not set
 # CONFIG_PACKAGE_wireguard-tools is not set
 # CONFIG_PACKAGE_xl2tpd is not set
-# CONFIG_PACKAGE_zerotier is not set
+CONFIG_PACKAGE_zerotier=y
 # end of VPN
 
 #
