--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -148,7 +148,10 @@ jobs:
         run: cd openwrt && ./scripts/feeds update -a
 
       - name: Install feeds
-        run: cd openwrt && ./scripts/feeds install -a
+        run: | 
+            cd openwrt && ./scripts/feeds install -a
+            make package/feeds/packages/libxcrypt/clean
+            make package/feeds/packages/libxcrypt/compile V=s 2>&1 | tee libxcrypt-build.log
 
       - name: Custom Packages 
         run: | 
