--- a/.github/workflows/bt-r320-24.10-6.6.yml
+++ b/.github/workflows/bt-r320-24.10-6.6.yml
@@ -23,7 +23,7 @@ env:
   CONFIG_FILE: bt-r320.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: bt-r320.sh
-  RELEASE_FILE: 360t7-24.10-6.6.md
+  RELEASE_FILE: bt-r320-24.10-6.6.md
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
