--- a/bt-r320.config
+++ b/bt-r320.config
@@ -9061,3 +9061,30 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_PACKAGE_f2fs-tools=y
+
+# Docker
+# CONFIG_PACKAGE_dockerd=y
+# CONFIG_PACKAGE_docker=y
+# CONFIG_PACKAGE_docker-compose=y
+# CONFIG_PACKAGE_kmod-overlay=y
+# CONFIG_PACKAGE_kmod-veth=y
+# CONFIG_PACKAGE_kmod-ipt-nat=y
+# CONFIG_PACKAGE_kmod-ipt-conntrack=y
+# CONFIG_PACKAGE_kmod-nf-conntrack=y
+# CONFIG_PACKAGE_kmod-nf-nat=y
+# CONFIG_PACKAGE_kmod-nf-flow=y
+# CONFIG_PACKAGE_kmod-br-netfilter=y
+# CONFIG_PACKAGE_kmod-cgroup2=y
+# CONFIG_PACKAGE_luci-app-dockerman=y
+
+# EasyTier
+CONFIG_PACKAGE_easytier-core=y
+CONFIG_PACKAGE_luci-app-easytier=y
+
+# Samba4 SMB 共享服务
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_samba4-server=y
+CONFIG_PACKAGE_samba4-libs=y
+CONFIG_PACKAGE_samba4-admin=y
+CONFIG_PACKAGE_samba4-utils=y
+# CONFIG_PACKAGE_samba4-client=n
